# galay-http

./: .gitignore  CHANGELOG.md  CMakeLists.txt  IMPROVEMENTS.md  README.md  SECURITY_DEMO.md  STATIC_FILES.md  rebuild_debug.sh  test_websocket.html  test_websocket.sh
benchmark/: B1-Chunked.cc  B1-HttpServer.cc  B10-H2cMuxServer.cc  B10-HttpClient.cc  B11-H2cMuxClient.cc  B12-H2Server.cc  B13-H2Client.cc  B14-HttpsServer.cc  B2-FileTransfer.cc  B2-HttpClient.cc  B3-H2cServer.cc  B3-HttpParser.cc  B4-H2cClient.cc  B4-WebsocketClient.cc  B5-Websocket.cc  B5-WebsocketServer.cc  B6-HttpRouter.cc  B6-WebsocketClient.cc  B7-HttpsBenchmark.cc  B7-WssServer.cc  B8-H2cServer.cc  B8-WssClient.cc  B9-HttpServer.cc  CMakeLists.txt  b10_h2mux.cc  b11_h2mux.cc  b12_h2.cc  b13_h2.cc  b14_https.cc  b15_header.cc  b1_http.cc  b2_http.cc  b3_h2c.cc  b4_h2c.cc  b5_ws.cc  b6_ws.cc  b7_wss.cc  b8_wss.cc  b9_hpack.cc  bench_websocket.cc
benchmark/compare/protocols/: run_compare.sh  run_wss_h2_focus.sh
benchmark/results/: header_optimization_benchmark_summary.txt  header_parsing_baseline.txt
benchmark/results/20260304-234436-go-rust-http-proto-compare/: go_h2.folded  go_h2.sample.txt  go_h2c.folded  go_h2c.sample.txt  go_http.folded  go_http.sample.txt  go_https.folded  go_https.sample.txt  go_ws.folded  go_ws.sample.txt  go_wss.folded  go_wss.sample.txt  metrics.csv  rust_h2.sample.txt  rust_h2c.sample.txt  rust_http.folded  rust_http.sample.txt  rust_https.sample.txt  rust_ws.folded  rust_ws.sample.txt  rust_wss.folded  rust_wss.sample.txt  summary.md
benchmark/results/20260304-go-rust-http-proto-compare/: go_h2.folded  go_h2.sample.txt  go_h2c.folded  go_h2c.sample.txt  go_http.folded  go_http.sample.txt  go_https.folded  go_https.sample.txt  go_ws.folded  go_ws.sample.txt  go_wss.folded  go_wss.sample.txt  metrics.csv  rust_http.sample.txt
benchmark/results/20260304-sampling/: b10b11_h2cmux_client.folded  b10b11_h2cmux_client.sample.txt  b10b11_h2cmux_server.folded  b10b11_h2cmux_server.sample.txt  b12b13_h2tls_client.folded  b9_hpack.folded  (+25 more)
example/: CMakeLists.txt  E1-EchoServer.cc  E10-H2Server.cc  E10-H2cEchoClient.cc  E11-H2Server.cc  E11-H2cServerPush.cc  E12-H2Client.cc  E12-H2cClient.cc  E13-H2Client.cc  E14-H2cMuxServer.cc  E15-H2cMuxClient.cc  E2-EchoClient.cc  E3-WebsocketServer.cc  E4-WebsocketClient.cc  E5-HttpsServer.cc  E6-HttpsClient.cc  E7-WssServer.cc  E8-WssClient.cc  E9-H2cServer.cc  README.md  echo_client.cc  echo_server.cc  example_http_router_integration.cc  example_websocket_client.cc  example_websocket_server.cc  example_wsclient_simple.cc
example/common/: ExampleCommon.h
example/include/: E10-H2cEchoClient.cpp  E11-StaticServer.cpp  E12-HttpProxy.cpp  E3-WebsocketServer.cpp  E4-WebsocketClient.cpp  E6-HttpsClient.cpp  E8-WssClient.cpp
examples/: CMakeLists.txt  README.md
examples/import/: e10_h2cecho.cpp  e11_static.cpp  e12_proxy.cpp  e13_h2echo.cpp  e14_h2echo.cpp  e1_echo.cpp  e2_echo.cpp  e3_ws.cpp  e4_ws.cpp  e5_https.cpp  e6_https.cpp  e7_wss.cpp  e8_wss.cpp  e9_h2cecho.cpp
examples/include/: E1-EchoServer.cpp  E10-H2cEchoClient.cpp  E10-h2c_echo_client.cpp  E11-StaticServer.cpp  E12-HttpProxy.cpp  E13-H2EchoServer.cpp  E13-h2_echo_server.cpp  E14-H2EchoClient.cpp  E14-h2_echo_client.cpp  E2-EchoClient.cpp  E2-echo_client.cpp  E3-WebsocketServer.cpp  E4-WebsocketClient.cpp  E4-websocket_client.cpp  E5-HttpsServer.cpp  E5-https_server.cpp  E6-HttpsClient.cpp  E6-https_client.cpp  E7-wss_server.cpp  E8-WssClient.cpp  E8-wss_client.cpp  E9-H2cEchoServer.cpp  E9-h2c_echo_server.cpp  e10_h2cecho.cpp  e11_static.cpp  e12_proxy.cpp  e13_h2echo.cpp  e14_h2echo.cpp  e1_echo.cpp  e2_echo.cpp  e3_ws.cpp  e4_ws.cpp  e5_https.cpp  e6_https.cpp  e7_wss.cpp  e8_wss.cpp  e9_h2cecho.cpp
galay-http/: CMakeLists.txt  HttpBase.cc  HttpBase.h  HttpBody.h  HttpConnection.cc  HttpConnection.h  HttpError.cc  HttpError.h  HttpHeader.cc  HttpHeader.h  HttpLogger.cc  HttpLogger.h  HttpReader.cc  HttpReader.h  HttpRequest.h  HttpResponse.inl  HttpUtils.cc  HttpUtils.h
galay-http/client/: HttpClient.cc  HttpClient.h
galay-http/common/: http_log.cc  http_log.h
galay-http/kernel/: HttpConnection.cc  HttpConnection.h  HttpParams.hpp  HttpReader.cc  HttpReader.h  HttpRouter.cc  HttpRouter.h  HttpWriter.cc  HttpWriter.h  IoVecUtils.h  SslRecvCompatAwaitable.h  iov_utils.h
galay-http/module/: ModulePrelude.hpp  galay.http.cppm  galay.http2.cppm  galay.websocket.cppm  galay_http.cppm  galay_http2.cppm  galay_websocket.cppm  module_prelude.hpp
galay-http/protoc/: HttpBase.cc  HttpBase.h  HttpError.cc  HttpError.h  HttpHeader.cc  HttpHeader.h  HttpRequest.h  HttpRequest.inl  HttpResponse.h
galay-http/server/: Http2Server.cc  Http2Server.h  HttpServer.cc  HttpServer.h  HttpsServer.cc  HttpsServer.h
galay-http/ssl/: SslConfig.h
galay-http/utils/: Http1_1RequestBuilder.cc  Http1_1RequestBuilder.h  Http2DebugLog.h  HttpDebugLog.h  HttpLogger.cc  HttpLogger.h  HttpUtils.cc  HttpUtils.h  HttpsDebugLog.h  WsDebugLog.h  http_logger.cc  http_logger.h  http_utils.cc  http_utils.h  req_bld.cc  req_bld.h  rsp_bld.cc  rsp_bld.h
test/: 13.mount_functions.cc  15.range_etag.cc  19.websocket_conn.cc  CMakeLists.txt  T1-HttpParser.cc  T10-ChunkedClient.cc  T10-chunked_client.cc  T11-HttpRouter.cc  T11-http_router.cc  T12-HttpRouterValidation.cc  T14-StaticFileTransferModes.cc  T15-RangeEtagServer.cc  T16-HttpClientTimeout.cc  T16-http_client_timeout.cc  T17-TestTimeout.cc  T17-test_timeout.cc  T18-WsServer.cc  T19-WsClient.cc  T19-ws_client.cc  T20-WebsocketClient.cc  T20-websocket_client.cc  T21-HttpsServer.cc  T21-https_server.cc  T22-HttpsClient.cc  T22-https_client.cc  T23-HttpsStressTest.cc  T23-https_stress_test.cc  T24-SimpleHttpsTest.cc  T24-simple_https_test.cc  T25-H2cClient.cc  T25-H2cServer.cc  T25-h2c_client.cc  T25-h2c_server.cc  T26-ProxyTryFilesE2E.cc  T27-H2Server.cc  T27-h2_server.cc  T28-H2Client.cc  T28-h2_client.cc  T29-h2_error_model.cc  T3-ReaderWriterServer.cc  (+177 more)
test/html/: README.md  test_h2.html  test_h2c.html  test_http1_fallback.html  test_ws_browser.html
(+653 files in other folders)
